bad/assign_self_self.example_compiler_output
ERROR
[1mbad/assign_self_self.lat:4:8: [1;31merror: [0;1mleft side is not assignable[m
		self = self;
		     [1;32m^[m
[1mbad/assign_self_self.lat:4:3: [1;34mnote: [0;1mleft side starts here[m
		self = self;
		[1;32m^[m
